# smartHouse_client

./: CMakeLists.txt  README.md  main.cpp
